# agent-for-harmful-information-detection

./: .gitignore  .~公开数据集与爬取入口.csv  Dockerfile  FRONTEND_README.md  Frontend.md  README.md  app.py  crawler_weibo.py  crawler_xiaohongshu.py  datasets_downloader.py  deploy.sh  deploy_retriever.yaml  frontend_app.py  preprocess.py  requirements.txt  run_app.py  vanilla_rag.yaml  信息安全设计与实践II 实验要求 - 概述.pptx  信息安全设计与实践实验指导书.ppt  公开数据集与爬取入口.csv
UltraRAG/: .env.dev  Dockerfile  README.md  environment.yml  outputs.txt  pyproject.toml
UltraRAG/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README-Chinese.md  README-English.md  SECURITY.md
UltraRAG/embedding/: embedding.npy
UltraRAG/examples/: IRCoT.yaml  IterRetGen.yaml  RankCoT.yaml  corpus_index.yaml  deploy_retriever.yaml  deploy_retriever_search.yaml  light_deepresearch.yaml  r1_searcher.yaml  rag.yaml  rag_api.yaml  rag_multiple_choice.yaml  rag_wow.yaml  retriever_and_embedding.yaml  sayhello.yaml  search_o1.yaml  search_r1.yaml  trans.py  vanilla.yaml  vanilla_multiple_choice.yaml  vanilla_rag.yaml  vanilla_vllm.yaml  vanilla_wow.yaml  visrag.yaml  webnote.yaml
UltraRAG/index/: index.index
UltraRAG/output/: evaluate_results_20250918_120007.json  memory__retriever_and_embedding_20250925_013003.json  memory_nq_vanilla_rag_20250918_120007.json  memory_nq_vanilla_rag_20250921_052256.json
UltraRAG/prompt/: IRCoT.jinja  IterRetGen_rag.jinja  RankCoT_knowledge_refinement.jinja  RankCoT_question_answering.jinja  infovqa.jinja  pairwise_evaluation_boxed_prompt1.jinja  pairwise_evaluation_boxed_prompt2.jinja  qa_boxed.jinja  (+31 more)
(+71 files in other folders)
