[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ultrarag"
version = "0.0.1"
description = "UltraRAG 2.0"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "fastmcp==2.11.3",
    "Jinja2",
    "openai",
    "httpx[socks]",
    "pandas",
    "python-dotenv",
    "PyYAML",
    "tqdm",
    "requests",
    "jsonlines",
    "tabulate",
    "aiohttp",
    "rouge-score",
    "flask[async]",
    "exa_py",
    "tavily-python",
]

[project.optional-dependencies]
infinity_emb = [
    "infinity_emb",
    "lancedb",
    "torch",
    "sentence-transformers==4.1.0",
]

lancedb = [
    "lancedb",
]

vllm = [
    "vllm",
]

corpus = [
    "llama-index",
    "llama-index-readers-file",
    "docx2txt",
    "chonkie",
]

all = [
    "infinity_emb",
    "lancedb",
    "torch",
    "sentence-transformers==4.1.0",
    "vllm",
    "llama-index",
    "llama-index-readers-file",
    "docx2txt",
    "chonkie",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ultrarag = "ultrarag.client:main"